SteveHorses OLD/Steve PRO OLD/logs/run_20250901_004820.log
  File "/Users/stephenjerome/Desktop/SteveHorsesPro/steve_horses_pro.py", line 172
    label = f\"#{prog} {name}\" if (SHOW_NUMBERS and prog) else name
                                                                   ^
SyntaxError: unexpected character after line continuation character
